# game-backend-cpp

./: .gitignore  CMakeLists.txt  LICENSE
backend/: CMakeLists.txt
backend/libraries/: CMakeLists.txt
backend/libraries/base/: CMakeLists.txt
backend/libraries/base/include/: main-lobby.h  person.h
backend/libraries/base/src/: base.cpp  main-lobby.cpp  main.cpp  person.cpp
backend/libraries/chess/: CMakeLists.txt
backend/libraries/chess/include/: board.h  chess-player.h  match.h  piece.h  types.h
backend/libraries/chess/src/: board.cpp  chess-player.cpp  match.cpp  piece.cpp
backend/shared/utils/: CMakeLists.txt
backend/tests/: CMakeLists.txt  chess-test.cpp
docker/: Dockerfile  README.md  sshd_config
